--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
  <!DOCTYPE html>
-
-
 <html>
-
-
 <head>
-
-
 <style>
+ .layout {
+   width: 100%;
 
-
-.layout {
-  width: 100%;
-
-  display: flex;
-  gap: 16px;
-}
-
+   display: flex;
+   gap: 16px;
+ }
 .grow1 { flex-grow: 1; }
-
-
 </style>
-
-
 </head>
-
 
 <body>
 
-
 <section class="layout">
-  <div><div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/Kolkata/time" style="text-decoration: none" class="clock24" id="tz24-1663233715-c154-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsImNvbnRhaW5lcl9pZCI6ImNsb2NrX2Jsb2NrX2NiNjMyMmVlYjNhZGQ2MCIsInR5cGUiOiJkYiIsImxhbmciOiJlbiJ9" title="Kolkata Time" target="_blank">India</a></p><div id="clock_block_cb6322eeb3add60"></div></div>
-<div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/State-of-New-York/time" style="text-decoration: none" class="clock24" id="tz24-1663233297-su27-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsImNvbnRhaW5lcl9pZCI6ImNsb2NrX2Jsb2NrX2NiNjMyMmVkMTE2NDA0OSIsInR5cGUiOiJkYiIsImxhbmciOiJlbiJ9" title="World Time :: New York" target="_blank">New York</a></p><div id="clock_block_cb6322ed1164049"></div></div>
-<script type="text/javascript" src="//w.24timezones.com/l.js" async></script></div>
-  
-  
+  <div>
+    <div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/Kolkata/time" style="text-decoration: none" class="clock24" id="tz24-1663233715-c154-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsImNvbnRhaW5lcl9pZCI6ImNsb2NrX2Jsb2NrX2NiNjMyMmVlYjNhZGQ2MCIsInR5cGUiOiJkYiIsImxhbmciOiJlbiJ9" title="Kolkata Time" target="_blank">India</a></p><div id="clock_block_cb6322eeb3add60"></div></div>
+    <div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/State-of-New-York/time" style="text-decoration: none" class="clock24" id="tz24-1663233297-su27-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsImNvbnRhaW5lcl9pZCI6ImNsb2NrX2Jsb2NrX2NiNjMyMmVkMTE2NDA0OSIsInR5cGUiOiJkYiIsImxhbmciOiJlbiJ9" title="World Time :: New York" target="_blank">New York</a></p><div id="clock_block_cb6322ed1164049"></div></div>
+    <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+  </div>
   <div class="grow1"><iframe src="https://sslecal2.investing.com?columns=exc_flags,exc_currency,exc_importance,exc_actual,exc_forecast,exc_previous&importance=3&features=filters&countries=25,6,72,17,10,35,43,12,4,5&calType=day&timeZone=23&lang=56" width="650" height="467" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe></div>
-  
   <div><div id="position-size-calculator-703627"><script type="text/javascript" src="https://www.cashbackforex.com/Content/remote/remote-widgets.js"></script><script type="text/javascript"> RemoteCalc({"Url":"https://www.cashbackforex.com", "TopPaneStyle":"YmFja2dyb3VuZDogd2hpdGU7IGNvbG9yOiBibGFjazsgYm9yZGVyOiBzb2xpZCAxcHggc2lsdmVyOyBib3JkZXItYm90dG9tOiBub25lOyA=","BottomPaneStyle":"YmFja2dyb3VuZDogd2hpdGU7IGJvcmRlcjogc29saWQgMXB4IHNpbHZlcjsgY29sb3I6IGRpbWdyZXk7","ButtonStyle":"YmFja2dyb3VuZDogYmxhY2s7IGNvbG9yOiB3aGl0ZTsgYm9yZGVyLXJhZGl1czogMTBweDs=","TitleStyle":"dGV4dC1hbGlnbjogbGVmdDsgZm9udC1zaXplOiA0MHB4OyBmb250LXdlaWdodDogNTAwOw==","TextboxStyle":"YmFja2dyb3VuZC1jb2xvcjogd2hpdGU7IGNvbG9yOiBibGFjazsgYm9yZGVyOiBzb2xpZCAxcHggI2FhYWFhYQ==","ContainerWidth":"665","DefaultInstrument":"EUR-USD","HighlightColor":"#ffff00","IsDisplayTitle":false,"IsShowChartLinks":false,"IsShowEmbedButton":false,"CompactType":"small","Calculator":"position-size-calculator","ContainerId":"position-size-calculator-703627"});</script></div></div>
 </section>
-
-
 </body>
-
-
 </html>
