--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ section::after {
 /* Style the footer */
 footer {
   background-color: white;
-  padding: 10px;
-  text-align: center;
-  color: white;
+  /*padding: 10px;*/
+  text-align: right;
+  color: black;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -70,8 +70,6 @@ footer {
 </style>
 </head>
 <body>
-
-<h3>Superhuman</h3>
 
 <header>
   <div>
@@ -98,4 +96,3 @@ footer {
 
 </body>
 </html>
-
